--- a/src/Components/Cards/styles.css
+++ b/src/Components/Cards/styles.css
@@ -132,11 +132,12 @@
 
     .card h3 {
         font-size: 1rem;
+        height: 5%;
     }
 
     .card img {
         max-width: 160px;
-        max-height: 100px;
+        height: 50%;
         margin-bottom: 5px;
         border-radius: 10px;
     }
@@ -144,13 +145,13 @@
     .card p {
         margin: 5px 0px;
         text-align: justify;
-        font-size: 0.4rem;
-        height: 20%;
+        font-size: 0.5rem;
+        height: 30%;
     }
 
-
-
     .card span {
+        display: block;
+        height: 5%;
         font-weight: 700;
         font-size: 1rem;
     }
