--- a/src/Components/Cards/styles.css
+++ b/src/Components/Cards/styles.css
@@ -126,7 +126,7 @@
         box-sizing: border-box;
         padding: 5px;
         width: 150px;
-        height: 260px;
+        height: 280px;
         justify-content: flex-start;
         z-index: 1;
         margin: 8px
@@ -149,6 +149,8 @@
         text-align: justify;
         font-size: 0.5rem;
         height: 30%;
+        position: relative;
+        width: 100%;
     }
 
     .card span {
@@ -156,6 +158,7 @@
         height: 5%;
         font-weight: 700;
         font-size: 1rem;
+        position: relative;
     }
 
     .modal-cards {
@@ -210,7 +213,6 @@
     }
 
     .arrows {
-        cursor: pointer;
         width: 25px;
     }
 
