--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -62,11 +62,11 @@
 
     .container-header {
         padding: 10px;
-        height: 90px;
+        height: 70px;
     }
 
     .header-title h1 {
-        font-size: 2.1rem;
+        font-size: 1.8rem;
         margin-left: 5px
     }
 
@@ -75,13 +75,14 @@
     }
 
     .social-media img {
-        width: 13px;
+        width: 12px;
     }
 
     .container-header a {
-        width: 70px;
-        font-size: 1rem;
+        width: 65px;
+        font-size: 0.9rem;
         margin: 0px 0px 8px;
+        padding: 3px;
     }
 
 }
