--- a/src/Components/Cards/styles.css
+++ b/src/Components/Cards/styles.css
@@ -142,6 +142,11 @@
         margin: 8px
     }
 
+    .card:hover {
+        transform: scale(1.05);
+        background-color: rgb(252, 162, 162);
+    }
+
 
     .card h3 {
         font-size: 0.9rem;
@@ -158,7 +163,7 @@
         margin: 5px 0px;
         text-align: justify;
         font-size: 0.7rem;
-        line-height: 7px;
+        line-height: 9px;
         height: 30%;
         position: relative;
         width: 100%;
