adição de produtos

--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -58,6 +58,11 @@
     border: 1px solid #FFF;
 }
 
+.container-header a:hover {
+    transform: scale(1.05);
+    border: 2px solid #FFF;
+}
+
 @media (max-width: 750px) {
 
     .container-header {
@@ -84,5 +89,7 @@
         margin: 0px 0px 8px;
         padding: 3px;
     }
+
+
 
 }
